first hibernate project
Signed-off-by: medali.bettaieb <medali.bettaieb@esprit.tn>

--- a/tn.edu.esprit.cs.playBox/.project
+++ b/tn.edu.esprit.cs.playBox/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>tn.edu.esprit.cs.playBox</name>
+	<name>tn.edu.esprit.cs.playBox-jdbc</name>
 	<comment></comment>
 	<projects>
 	</projects>
