--- a/tn.edu.esprit.cs.playBox-ejb-client/.classpath
+++ b/tn.edu.esprit.cs.playBox-ejb-client/.classpath
@@ -4,6 +4,7 @@
 	<classpathentry kind="src" path="config"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="lib" path="lib/jboss-client.jar"/>
+	<classpathentry kind="lib" path="lib/hibernate-core-4.0.1.Final.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/tn.edu.esprit.cs.playBox-ejb"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
